<resources>
    <string name="app_name">MyProject</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="string_enterReceipt">Enter Receipt</string>
    <string name="string_selecttype">Please Select a Category</string>
    <string name="string_grocery">Grocery</string>
    <string name="string_electricity">Electricity</string>
    <string name="string_gas">Gasoline</string>
    <string name="string_Rent_mortage">Rent/Mortage</string>
    <string name="string_restaurant">Restaurant</string>
    <string name="string_maintenance">Maintenance</string>
    <string name="string_loans">Loans</string>
    <string name="string_entertainment">Entertainment</string>
    <string name="string_overallbalance">Balance:</string>
    <string name="string_overallgasbalance">Balance:</string>
    <string name="string_add">Add</string>
    <string name="string_delete">Delete</string>
    <string name="addbuttonclicked">AddButtonClicked</string>
    <string name="deletebuttonclicked">DeleteButtonClicked</string>
    <string name="string_overallrentbalance">Balance:</string>
    <string name="string_overallgrocerybalance">Total:</string>
    <string name="string_grocerylist">grocerylist</string>
    <string name="string_insurance">Insurance</string>
    <string name="string_names">Name</string>
    <string name="string_quantity">Quantity</string>
    <string name="string_cost">Cost</string>
    <string name="string_totalbalance">TotalBalance</string>
</resources>
