<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:baselineAligned="false"
    tools:layout_editor_absoluteY="81dp"
    tools:layout_editor_absoluteX="0dp">

    <TextView
        android:id="@+id/txt"
        android:layout_width="395dp"
        android:layout_height="wrap_content"
        android:text="@string/string_selecttype"
        tools:layout_editor_absoluteX="16dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp" />

    <Button
        android:id="@+id/grocerybutton"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:text="@string/string_grocery"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="@+id/guideline"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/txt" />

    <Button
        android:id="@+id/gasolinebutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/string_gas"
        app:layout_constraintLeft_toRightOf="@+id/grocerybutton"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/txt" />

    <Button
        android:id="@+id/rentbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/string_Rent_mortage"
        app:layout_constraintLeft_toRightOf="@+id/gasolinebutton"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/txt" />

    <Button
        android:id="@+id/electricitybutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/string_electricity"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/grocerybutton"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="@+id/guideline" />

    <Button
        android:id="@+id/entertainment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/string_entertainment"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/grocerybutton"
        app:layout_constraintLeft_toRightOf="@+id/electricitybutton"
        android:layout_marginLeft="16dp" />

    <Button
        android:id="@+id/loansbutton"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:text="@string/string_loans"
        app:layout_constraintLeft_toRightOf="@+id/entertainment"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/grocerybutton" />

    <Button
        android:id="@+id/maintenancebutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/string_maintenance"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/electricitybutton"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="@+id/guideline" />

    <Button
        android:id="@+id/restaurantbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/string_restaurant"
        app:layout_constraintLeft_toRightOf="@+id/maintenancebutton"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/electricitybutton" />

    <Button
        android:id="@+id/insurancebutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="25dp"
        android:layout_marginTop="16dp"
        android:text="Insurance"
        app:layout_constraintLeft_toRightOf="@+id/restaurantbutton"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/electricitybutton" />

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="16dp"
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="16dp" />

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline2"
        app:layout_constraintGuide_begin="20dp"
        android:orientation="horizontal" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="104dp"
        android:layout_height="38dp"
        android:text="@string/string_overallbalance"
        android:textSize="24sp"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="@+id/guideline"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="184dp" />

    <TextView
        android:id="@+id/overallbalance"
        android:layout_width="242dp"
        android:layout_height="41dp"
        android:layout_marginLeft="16dp"
        android:textIsSelectable="false"
        android:textSize="24sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView2"
        app:layout_constraintLeft_toRightOf="@+id/textView2" />


</android.support.constraint.ConstraintLayout>
